--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_core: ^2.14.0
   firebase_database: ^10.2.3
   firebase_storage: ^11.2.3
+  cloud_firestore: ^4.8.1
 
 dev_dependencies:
   flutter_test:
